# skinmap-code

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  Dockerfile  Makefile  README.md  constraints.txt  pyproject.toml  pytest.ini  requirements.txt
scripts/: build_icd_mapping.py  parse_icd10_tabular.py  run_hole_detection.py
src/: analysis_plus.py  combined_embedder.py  create_skinmap.py  embedding_fusion.py  generate_concise_captions.py  icd_mapping.py  prep_data.py  representational_metrics.py  run_analysis.py  train_clip.py  trend_analysis.py
src/hole_detection/: __init__.py  eff_resistance.py  metrics.py  synthetic.py
src/skinmap/: __init__.py  constants.py
src/skinmap/cache/: __init__.py  manager.py
src/skinmap/data/: __init__.py  preprocessing.py  transforms.py
src/skinmap/embeddings/: __init__.py  (+3 more)
src/utils/: merge_isic_metadata.py
tests/: __init__.py  conftest.py  test_atlas.py  test_atlas_parquet_schema.py  test_balancing.py  test_bootstrap.py  test_bootstrap_integration.py  test_bugfixes_validation.py  test_cache.py  test_create_skinmap.py  test_data.py  test_downstream_evaluation.py  test_effective_resistance_ph.py  test_embeddings.py  test_fusion.py  test_metadata_predictions.py  test_metrics.py  test_models.py  test_prep_data.py  test_projector.py  test_projector_pipeline.py  test_refactoring_regressions.py  test_results_saving.py  test_run_analysis.py  test_structure_loss.py
tests/integration/: __init__.py  test_end_to_end.py  test_ssl_models.py  test_structure_regularization_integration.py
(+13 files in other folders)
